# ai-engineer-applications

./: 3DS_TESTING_GUIDE.md  AWS_DEPLOYMENT_GUIDE.md  AWS_SERVICE_COMPARISON.md  CLOUDFLARE_DNS_GUIDE.md  COST_OPTIMIZED_DEPLOYMENT.md  NO_DOMAIN_DEPLOYMENT.md  QUICK_START_COST_OPTIMIZED.md  README.md  deploy-cost-optimized.ps1  deploy-cost-optimized.sh  deploy.ps1  deploy.sh  project-planning.md
backend/: .env.example  DEEPSEEK_LLM_GUIDE.md  README.md  SETUP.md  app.py  lambda_app.py  lambda_handler.py  llm_service.py  pyproject.toml  requirements.txt  risk_service.py  rules.json  test_3ds_fix.py  test_field_rules.py  test_risk_check.py  test_risk_local.py
backend/cloudformation/: README.md  README_LAMBDA_STRUCTURE.md  backend-lambda-url.yaml  backend-lambda.yaml  frontend-s3-cloudfront.yaml
backend/docs/: LLM_WITHOUT_3DS_GUIDE.md  README.md
backend/tests/: README.md  test_llm_without_3ds.py  test_risk_service.py
frontend/: README.md  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Checkout.css  Checkout.jsx  ThreeDSChallenge.css  ThreeDSChallenge.jsx
